Fixed overflow x

--- a/src/app/bubble/bubble.component.scss
+++ b/src/app/bubble/bubble.component.scss
@@ -57,7 +57,7 @@ pre {
   margin: 32px 8%;
   padding: 32px !important;
   background: #dddddd50;
-  overflow: hidden;
+  overflow-x: scroll;
 }
 
 .purple {
